--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css?v=1.1">
   <title>Üyelik Kartı Düzenleyici</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
