add option for sexInput

--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@ canvas {
 
     <label>Cinsiyet</label>
     <input type="text" id="sexInput" placeholder="Sex">
-    
+    <select id="sexInput">
+         <option value="">Sex</option>
+         <option value="Female">Female</option>
+        <option value="Male">Male</option>
+    </select>
     <label>Servis</label>
     <select id="serviceInput">
     <option value="">Service</option>
