add new option for serviceINput

--- a/index.html
+++ b/index.html
@@ -220,11 +220,12 @@ canvas {
     </select>
     <label>Servis</label>
     <select id="serviceInput">
-      <option value="District Attorney’s Office">District Attorney’s Office</option>
-      <option value="LS County Sheriff's Department">LS County Sheriff's Department</option>
-      <option value="LS Police Department">LS Police Department</option>
-      <option value="LS Fire Department">LS Fire Department</option>
-      <option value="SA Department of Corrections">SA Department of Corrections</option>
+        <option value="District Attorney’s Office">District Attorney’s Office</option>
+        <option value="LS County Sheriff's Department">LS County Sheriff's Department</option>
+        <option value="LS Police Department">LS Police Department</option>
+        <option value="LS Fire Department">LS Fire Department</option>
+        <option value="SA Department of Corrections">SA Department of Corrections</option>
+        <option value="LS City Government">LS City Government</option>
     </select>
     <label for="">ID</label>
     <input type="text" id="idInput" placeholder="Yanlızca Ticket NO">
