add new option for download

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ document.getElementById('downloadBtn').addEventListener('click',()=>{
   canvas.toBlob(blob=>{
     const a=document.createElement('a');
     a.href=URL.createObjectURL(blob);
-    a.download='uyelik-karti.png';
+    a.download=`${nameInput.value}-The Oath Beavers Association.png`;
     a.click();
     URL.revokeObjectURL(a.href);
   });
