add new option for download

--- a/index.html
+++ b/index.html
@@ -186,19 +186,22 @@ canvas {
 
         <span class="command">/iconpicker</span><br>
         <span class="notf">"yazdıktan sonra önünüze gelen menüde "Diğer" kısmında yer alan üçüncü satırın soldan 4. simgeyi seçin."</span><br>
-        <a href="https://i.imgur.com/GnqvfVc.png" target="_blank">Simge Görseli</a><br><br>
+        <a href="https://i.imgur.com/GnqvfVc.png" target="_blank" style="color: cadetblue; text-decoration: none;">Simge Görseli</a><br><br>
 
         <span class="command">/note x 1 ikon</span><br>
         <span class="notf">"bu komut iconpickerdan seçtiğiniz ikonu değiştirmenizi sağlar"</span><br><br>
 
         <span class="command">/note x 1 içerik</span><br>
-        <span class="notf">"burada olan imgur linkini sizin için hazırladığımız kart linkiyle değiştirin"</span><br><br>
-
+        <span class="notf">"burada olan imgur linkini sizin için hazırladığımız kart linkiyle değiştirin"</span>
+        <hr>
         <span class="command">ID</span><br>
         <span class="notf">"Bu alan yalnızca Ticket numarası ile doldurulmalıdır. Örneğin, 'Ticket-002' veya 'SNPCE-ticket-ticketno-günayyıl-[durum]' formatında görünür. Buradaki 'ticketno' sizin ID’nizi temsil eder."</span><br><br>
 
+        <span class="command">Beyaz Arka Plan</span><br>
+        <span class="notf">"<a href="imgur.com" style="color: cadetblue; text-decoration: none;">imgur.com </a> sitesine kayıt olarak sorunsuz bir şekilde oyun içerisinde kartınızı oluşturabilirsiniz. Kartınız beyaz bir arka plandaysa, elde ettiğiniz dosyayı 1000x1000 olacak şekilde yeniden boyutlandırın daha sonra da upload edin."</span><br><br>
+
         <p style="background-color: black; padding: 3px; color: #C2A2DA;">
-        The Outh Beavers Association tarafından adresinize kargolanmış bir zarf. Zarf içerisinde bir kart ve bu bilgilendirme mesajını görmektesiniz.
+        * The Outh Beavers Association tarafından adresinize kargolanmış bir zarf. Zarf içerisinde bir kart ve bu bilgilendirme mesajını görmektesiniz.
         
     </p>
         <p class="note">Her kullanıcı yalnızca bir kart sahibi olabilir.</p>
