--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>The Oath Beavers Association - Membership Card Creator Tool</title>
 <link rel="icon" href="oath.png" type="image/png">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -194,12 +195,16 @@ canvas {
         <span class="command">/note x 1 içerik</span><br>
         <span class="notf">"burada olan imgur linkini sizin için hazırladığımız kart linkiyle değiştirin"</span>
         <hr>
-        <span class="command">ID</span><br>
-        <span class="notf">"Bu alan yalnızca Ticket numarası ile doldurulmalıdır. Örneğin, 'Ticket-002' veya 'SNPCE-ticket-ticketno-günayyıl-[durum]' formatında görünür. Buradaki 'ticketno' sizin ID’nizi temsil eder."</span><br><br>
+        <span class="command" style="background-color: #f39c12; color: #fff; padding: 2px 8px; border-radius: 5px; font-weight: bold;"><i class="fa-solid fa-triangle-exclamation" style="margin-right: 5px;"></i>ID</span><br>
+        <p style="background-color: #2c3e50; color: #ecf0f1; padding: 10px; border: 3px solid #34495e; border-radius: 5px;">"Bu alan yalnızca Ticket numarası ile doldurulmalıdır. Örneğin, 'Ticket-002' veya 'SNPCE-ticket-ticketno-günayyıl-[durum]' formatında görünür. Buradaki 'ticketno' sizin ID’nizi temsil eder."</p><br><br>
 
-        <span class="command">Beyaz Arka Plan</span><br>
-        <span class="notf">"<a href="imgur.com" style="color: cadetblue; text-decoration: none;">imgur.com </a> sitesine kayıt olarak sorunsuz bir şekilde oyun içerisinde kartınızı oluşturabilirsiniz. Kartınız beyaz bir arka plandaysa, elde ettiğiniz dosyayı 1000x1000 olacak şekilde yeniden boyutlandırın daha sonra da upload edin."</span><br><br>
-
+         <span class="command" style="background-color: #f39c12; color: #fff; padding: 2px 8px; border-radius: 5px; font-weight: bold;"><i class="fa-solid fa-triangle-exclamation" style="margin-right: 5px;"></i>Beyaz Arkaplan</span>  
+         <p class="notf" style="background-color: #2c3e50; color: #ecf0f1; padding: 10px; border: 3px solid #34495e; border-radius: 5px;">
+            "<a href="https://imgur.com" style="color: #1abc9c; text-decoration: none;">imgur.com</a> 
+            sitesine kayıt olarak sorunsuz bir şekilde oyun içerisinde kartınızı oluşturabilirsiniz. 
+            Kartınız beyaz bir arka plandaysa, elde ettiğiniz dosyayı 1000x1000 olacak şekilde yeniden boyutlandırın 
+            daha sonra da upload edin."
+        </p>
         <p style="background-color: black; padding: 3px; color: #C2A2DA;">
         * The Outh Beavers Association tarafından adresinize kargolanmış bir zarf. Zarf içerisinde bir kart ve bu bilgilendirme mesajını görmektesiniz.
         
