--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ canvas {
         <span class="notf">"burada olan imgur linkini sizin için hazırladığımız kart linkiyle değiştirin"</span>
         <hr>
         <span class="command" style="background-color: #f39c12; color: #fff; padding: 2px 8px; border-radius: 5px; font-weight: bold;"><i class="fa-solid fa-triangle-exclamation" style="margin-right: 5px;"></i>ID</span><br>
-        <p style="background-color: #2c3e50; color: #ecf0f1; padding: 10px; border: 3px solid #34495e; border-radius: 5px;">"Bu alan yalnızca Ticket numarası ile doldurulmalıdır. Örneğin, 'Ticket-002' veya 'SNPCE-ticket-ticketno-günayyıl-[durum]' formatında görünür. Buradaki 'ticketno' sizin ID’nizi temsil eder."</p><br><br>
+        <p style="background-color: #2c3e50; color: #ecf0f1; padding: 10px; border: 3px solid #34495e; border-radius: 5px;">"Bu alan yalnızca Ticket numarası ile doldurulmalıdır. Örneğin, 'Ticket-002' veya 'SNPCE-ticket-ticketno-günayyıl-[durum]' formatında görünür. Buradaki 'ticketno' sizin ID’nizi temsil eder."</p>
 
          <span class="command" style="background-color: #f39c12; color: #fff; padding: 2px 8px; border-radius: 5px; font-weight: bold;"><i class="fa-solid fa-triangle-exclamation" style="margin-right: 5px;"></i>Beyaz Arkaplan</span>  
          <p class="notf" style="background-color: #2c3e50; color: #ecf0f1; padding: 10px; border: 3px solid #34495e; border-radius: 5px;">
