--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ canvas {
     </div>
 
     <div class="footer">
-      * The Outh Beavers Association tarafından adresinize kargolanmış bir zarf. Zarf içerisinde bir kart ve bu bilgilendirme mesajını görmektesiniz.
+      * The Outh Beavers Association tarafından adresinize kargolanmış bir zarf. Zarf içerisinde bir kart ve bir bilgilendirme mesajını görmektesiniz.
     </div>
 
     <p class="notf" style="border-left: 4px solid rgb(156, 31, 31);">Her kullanıcı yalnızca bir kart sahibi olabilir.</p>
