--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@ body {
 }
 
 /* Bilgilendirme Paneli */
-.info-box {
-  background: #1a1a1a;
-  border-radius: 8px;
-  width: 350px;
-  overflow: hidden;
-  position: relative;
-  font-size: 13px;
-}
+
+  .info-box {
+    background: #1a1a1a;
+    border-radius: 8px;
+    width: 330px;
+    overflow: hidden;
+    position: relative;
+    font-size: 13px;
+    flex-shrink: 0;      /* kutu boyutu küçülmesin */
+  }
 
 .info-header {
   background: #1a1a1a;
